--- a/styles/style.css
+++ b/styles/style.css
@@ -1,91 +1,76 @@
 /* Content stuff */
 body {
-    margin: 0;
-    background-color: #fef2aa;
-    font-size: 16px;
-}
+  margin: 0 auto;
+  background-color: #a3cad2;
+  font-size: 1.8rem;
+  font-family: Consolas, monaco, monospace, Verdana; }
 
-.eight.columns {
-    background-color: #fef2e4;
-    outline: solid 80px #fef2e4;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-}
+.ten.columns {
+  background-color: #fef2fa;
+  outline: solid 1px black;
+  padding: 60px 100px 0px 100px; }
 
 /* Fill content to the botttom of the page. */
 html, body, .container, .row {
-    height: 100%;
-}
-.eight.columns {
-    min-height: 100%;
-}
+  height: 100%; }
+
+.ten.columns {
+  min-height: 100%; }
 
 /* Pad my name so that Skeleton can split it into two lines earlier. */
 #my-name {
-    padding-right: 100px;
-}
+  padding-right: 100px; }
 
 /* Tell me I'm pretty. */
 #my-face {
-    height: 100px;
-    float: right;
-    margin: -115px 0px -100px 0px;
-}
+  height: 100px;
+  float: right;
+  margin: -115px 0px -100px 0px; }
 
 #top-divider {
-    margin-top: -5px;
-    margin-bottom: 20px;
-}
+  margin-top: -5px;
+  margin-bottom: 20px; }
 
 #hello {
-    padding-top: 5px;
-}
+  padding-top: 5px; }
 
 hr {
-    background-color: #ee693f;
-    border-width: 0px;
-    height: 2px;
-}
+  background-color: #000;
+  border-width: 0px;
+  height: 2px; }
+
+ul.fa-ul li i.fa-li {
+  color: #000; }
 
 a {
-    text-decoration: none;
-    color: #e73f0b;
-}
+  text-decoration: none;
+  color: #000;
+  font-weight: bold; }
 
 a:hover {
-    text-decoration: underline;
-    color: #e73f0b;
-}
+  text-decoration: underline;
+  color: #000; }
 
 /* Desktop first. Boooo mobile. */
-
 /* If width <= 865px, my name splits into two lines, so move the content up a bit. */
 @media (max-width: 865px) {
-    .eight.columns {
-        padding-top: 20px;
-    }
-}
-
+  .ten.columns {
+    padding: 20px; } }
 /* If width <= 549px, Skeleton resizes so that the columns have width 100%,
  * so hide the side columns and adjust the content's top padding again. */
-@media (max-width: 549px ) {
-    .two.columns {
-        display: none;
-    }
-    .eight.columns {
-        padding-top: 50px;
-    }
-}
+@media (max-width: 549px) {
+  .one.column {
+    display: none; }
 
+  .ten.columns {
+    padding: 50px; } }
 /* If width <= 455px, my name splits into two lines, so same deal as above. */
 @media (max-width: 455px) {
-    .eight.columns {
-        padding-top: 20px;
-    }
-}
-
+  .ten.columns {
+    padding: 20px; } }
 /* For debugging. */
 /*.columns, .row, .container {
     border: solid 1px black;
 }*/
+
+/*# sourceMappingURL=style.css.map */
